overflow fixed

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -13,7 +13,7 @@
 }
 
 .about {
-  overflow-x: clip;
+  overflow-x: hidden;
   text-align: center;
 
   .grass-top {
