--- a/src/scss/festival.scss
+++ b/src/scss/festival.scss
@@ -30,7 +30,7 @@
 }
 
 .history {
-  overflow-x: clip;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
